--- a/Public/assets/scss/style.scss
+++ b/Public/assets/scss/style.scss
@@ -7,6 +7,7 @@
 
 /* ─── VARIABLE ──────────────────────────────────────────── */
 $color: red;
+$color2: blue;
 
 /* ─── BASE ──────────────────────────────────────────────── */
 body {
