--- a/Public/assets/scss/style.scss
+++ b/Public/assets/scss/style.scss
@@ -21,6 +21,19 @@ body {
 /* ─── LAYOUT ────────────────────────────────────────────── */
 
 /* ─── MODULE ────────────────────────────────────────────── */
+#loader {
+    position: absolute;
+    width: 100%;
+    height: 100vh;
+    left: 0;
+    top: 0;
+    z-index: 999;
+}
+#loader img {
+    width: 100%;
+    height: 100vh;
+    object-fit: cover;
+}
 
 /* ─── STATE ─────────────────────────────────────────────── */
 
