--- a/Public/assets/scss/style.scss
+++ b/Public/assets/scss/style.scss
@@ -6,12 +6,18 @@
 @import url("reset.css");
 
 /* ─── VARIABLE ──────────────────────────────────────────── */
-$color: red;
-$color2: blue;
+$rose: #FF7171;
+$orange: #FF9163;
+
+$bleu: #227093;
+$violet: #9743D9;
+
+$font1: 'Amatic SC', cursive;
+$font2: 'Kanit', sans-serif;
 
 /* ─── BASE ──────────────────────────────────────────────── */
 body {
-    font-family: 'Poppins', sans-serif;
+    font-family: $font2;
     font-size: 16px;
     scroll-behavior: smooth;
     -webkit-font-smoothing: antialiased;
