--- a/Pro/Public/assets/css/main.css
+++ b/Pro/Public/assets/css/main.css
@@ -3,16 +3,16 @@ font-family: 'Kanit', sans-serif;
 font-family: "Amatic SC", cursive;
 */
 
-body{
-  font-family: 'Kanit', sans-serif;
-  color: #222F3E;
+body {
+  font-family: "Kanit", sans-serif;
+  color: #222f3e;
 }
 
-#main{
+#main {
   max-height: 80vh;
 }
 
-#main .titlemain{
+#main .titlemain {
   font-family: "Amatic SC", cursive;
   letter-spacing: 5px;
   font-weight: 900;
@@ -22,33 +22,34 @@ body{
   justify-content: center;
 }
 
-#main .title{
-  font-family: 'Kanit', sans-serif;
+#main .title {
+  font-family: "Kanit", sans-serif;
   font-size: calc(1vw + 20px);
 }
 
-#main .text{
+#main .text {
   color: #576574;
 }
 
-#main .box_categorie{
+#main .box_categorie {
   display: flex;
   justify-content: space-around;
 }
 
-#main .box{
+#main .box {
   width: 45%;
 }
-#main .content_box1{
+#main .content_box1 {
   margin-left: 100px;
 }
 
-#main .content_box1 .text,.img{
-padding: 40px 0;
+#main .content_box1 .text,
+.img {
+  padding: 40px 0;
 }
 
-#main .button button{
-  background-color: #F1F2F6;
+#main .button a {
+  background-color: #f1f2f6;
   color: #227093;
   border: 0 solid #fff;
   padding: 1vh 1vw;
@@ -58,63 +59,62 @@ padding: 40px 0;
   text-decoration: none;
 }
 
-#main .button button:hover{
-  color: #F1F2F6;
+#main .button a:hover {
+  color: #f1f2f6;
   background-color: #227093;
   transition: ease-in 200ms;
+  cursor: pointer;
 }
 
-#main .box .content1{
+#main .box .content1 {
   display: flex;
   justify-content: center;
   height: 40vh;
 }
 
-#main .box .content1right{
+#main .box .content1right {
   display: flex;
   flex-direction: column;
   justify-content: space-between;
   padding-bottom: 5vh;
 }
 
-#main .text{
+#main .text {
   padding-left: 4vw;
   letter-spacing: 1px;
   line-height: 20px;
 }
 
-#main .img img{
+#main .img img {
   transform: scale(1);
   animation: slidein 3s ease-out infinite;
 }
 
 @keyframes slidein {
-  0%{
+  0% {
     transform: scale(1);
   }
   50% {
     transform: scale(1.05);
   }
-  100%{
+  100% {
     transform: scale(1);
-
   }
 }
 
-#main .loginbtn{
+#main .loginbtn {
   margin-top: 50px;
 }
 
-#main .login{
+#main .login {
   display: flex;
   flex-direction: row-reverse;
   justify-content: flex-end;
-} 
+}
 
-#main .login div.loginbtn{
+#main .login div.loginbtn {
   position: relative;
   left: 50px;
-
 }
 
 /*------------HEADER---------------*/
