--- a/Public/assets/scss/style.scss
+++ b/Public/assets/scss/style.scss
@@ -4,166 +4,14 @@
 
 /* ─── IMPORTATION ───────────────────────────────────────── */
 @import url("reset.css");
+@import 'variables';
 @import 'mixins';
-
-/* ─── VARIABLE ──────────────────────────────────────────── */
-//colors-primary
-$rose: #FF7171;
-$orange: #FF9163;
-//colors-secondary
-$bleu: #227093;
-$violet: #9743D9;
-//fonts
-$font1: 'Amatic SC', cursive;
-$font2: 'Kanit', sans-serif;
-
-/* ─── BASE ──────────────────────────────────────────────── */
-body {
-    font-family: $font2;
-    font-size: 16px;
-    scroll-behavior: smooth;
-    -webkit-font-smoothing: antialiased;
-    -moz-osx-font-smoothing: grayscale;
-}
-.wrap {
-    @include wrap(1440px);
-}
-
-/* ─── LAYOUT ────────────────────────────────────────────── */
-#l-header {
-    position: relative;
-    z-index: 99;
-    padding: 15px 0;
-    @include primary-gradient;
-}
-
-/* ─── MODULE ────────────────────────────────────────────── */
-#loader {
-    position: absolute;
-    width: 100%;
-    height: 100vh;
-    left: 0;
-    top: 0;
-    z-index: 999;
-}
-#loader img {
-    width: 100%;
-    height: 100vh;
-    object-fit: cover;
-}
-ul.nav-links {
-    z-index: 1;
-    padding: 20px;
-    position: absolute;
-    width: 20%;
-    height: calc(100vh - 132px);
-    top: 0;
-    left: 0;
-    transform: translate3d(-100%, 132px, 0);
-    @include flex(space-around, center);
-    flex-direction: column;
-    background-color: white;
-    border-radius: 0 50px 50px 0;
-    transition: all .2s ease-out;
-}
-ul.nav-links li a {
-    padding: 10px 20px;
-    font-family: $font1;
-    font-weight: 700;
-    font-size: 1.5em;
-    text-decoration: none;
-    color: black;
-    opacity: .7;
-}
-ul.nav-links li a:hover {
-    opacity: 1;
-}
-nav,
-nav .right-links ul {
-    @include flex(space-between, center);
-}
-nav {
-    position: relative;
-}
-nav .right-links ul img {
-    width: 85px;
-}
-nav .right-links ul li {
-    margin: 0 20px;
-}
-nav .right-links ul li a.btn {
-    padding: 7px 20px;
-    text-decoration: none;
-    color: black;
-    background-color: white;
-    border: 2px solid white;
-    border-radius: 50px;
-}
-nav .hamburger {
-    position: relative;
-    width: 50px;
-    height: 30px;
-    cursor: pointer;
-}
-nav .hamburger .bar {
-    position: absolute;
-    width: 100%;
-    height: 4px;
-    background-color: white;
-    border-radius: 50px;
-    transition: all .2s ease-out;
-}
-nav .hamburger .top {
-    top: 0;
-    left: 0;
-    transform: translate3d(0, 0, 0);
-    width: 80%;
-}
-nav .hamburger .middle {
-    top: 50%;
-    left: 0;
-    transform: translate3d(0, -50%, 0);
-}
-nav .hamburger .bottom {
-    top: 100%;
-    left: 0;
-    transform: translate3d(0, -100%, 0);
-    width: 80%;
-}
-
-/* ─── STATE ─────────────────────────────────────────────── */
-nav .hamburger.is-active .top {
-    top: 50%;
-    left: 0;
-    transform: translate3d(0, -50%, 0) rotate(-45deg);
-}
-nav .hamburger.is-active .middle {
-    width: 0;
-    opacity: 0;
-}
-nav .hamburger.is-active .bottom {
-    top: 50%;
-    left: 0;
-    transform: translate3d(0, -50%, 0) rotate(45deg);
-}
-ul.nav-links.is-active {
-    transform: translate3d(0, 132px, 0);
-    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3),
-                0px 0px 50px rgba(0, 0, 0, 0.1);
-}
-
-/* ─── RESPONSIVE ────────────────────────────────────────── */
-@media screen and (max-width: 700px) {
-    ul.nav-links {
-        width: 50%;
-    }
-}
-@media screen and (max-width: 500px) {
-    ul.nav-links {
-        width: 100%;
-        border-radius: 0;
-    }
-}
+@import 'base';
+@import 'navbar';
+@import 'footer';
+@import 'loader';
+@import 'home';
+@import 'responsive';
 
 /* ─────────────────────────────────────────────────────────
 /* ------------------- C S S   E N D -----------------------
