--- a/Public/assets/scss/style.scss
+++ b/Public/assets/scss/style.scss
@@ -11,6 +11,8 @@
 @import 'footer';
 @import 'loader';
 @import 'home';
+@import 'signup';
+@import 'signin';
 @import 'responsive';
 
 /* ─────────────────────────────────────────────────────────
