--- a/Public/assets/scss/responsive.scss
+++ b/Public/assets/scss/responsive.scss
@@ -2,7 +2,7 @@
 
 @media screen and (max-width: 800px) {
     .flex {
-        flex-direction: column;
+        flex-direction: column-reverse;
         padding: 15px;
     }
     .left,
@@ -14,6 +14,10 @@
     .right {
         padding-left: 0;
         padding-right: 0;
+    }
+    .illustration,
+    .form {
+        width: 100% !important;
     }
 }
 @media screen and (max-width: 700px) {
@@ -37,6 +41,15 @@
     }
     ul.nav-links.is-active {
         transform: translate3d(0, 90px, 0);
+    }
+    input[type=text],
+    input[type=email],
+    input[type=password],
+    input[type=date],
+    input[type=file],
+    input[type=tel],
+    textarea {
+        width: 100%;
     }
 }
 @media screen and (max-width: 500px) {
