--- a/Public/assets/css/home.css
+++ b/Public/assets/css/home.css
@@ -16,18 +16,17 @@
 .left,
 .right {
   width: 50%;
+  height: 378px;
 }
 
 .left {
   padding-right: 30px;
-}
-
-.left img {
-  width: 100%;
+  position: relative;
 }
 
 .right {
   padding-left: 30px;
+  height: 100%;
 }
 
 .right h2 {
@@ -44,4 +43,17 @@
 
 .particulier {
   padding-bottom: 20px;
+}
+
+.card3 {
+  width: 100%;
+}
+
+.man3 {
+  width: 100%;
+}
+
+#home #scene {
+  width: 100%;
+  top: 50%;
 }
