--- a/Public/assets/css/responsive.css
+++ b/Public/assets/css/responsive.css
@@ -18,6 +18,9 @@
     padding-left: 0;
     padding-right: 0;
   }
+  .right {
+    margin-bottom: 50px;
+  }
   .illustration,
   .form {
     width: 100% !important;
@@ -64,5 +67,9 @@
   ul.nav-links {
     width: 100%;
     border-radius: 0;
+  }
+  .user-card {
+    float: none;
+    margin: 25px auto 0 auto;
   }
 }
