--- a/Public/assets/scss/responsive.scss
+++ b/Public/assets/scss/responsive.scss
@@ -15,6 +15,9 @@
         padding-left: 0;
         padding-right: 0;
     }
+    .right {
+        margin-bottom: 50px;
+    }
     .illustration,
     .form {
         width: 100% !important;
@@ -56,5 +59,9 @@
     ul.nav-links {
         width: 100%;
         border-radius: 0;
+    }
+    .user-card {
+        float: none;
+        margin: 25px auto 0 auto;
     }
 }
