--- a/Public/assets/scss/responsive.scss
+++ b/Public/assets/scss/responsive.scss
@@ -1,5 +1,11 @@
 /* ─── RESPONSIVE ───────────────────────────────────────── */
 
+@media screen and (max-width: 1000px) {
+    .grid {
+        display: flex;
+        flex-direction: column;
+    }
+}
 @media screen and (max-width: 800px) {
     .flex {
         flex-direction: column-reverse;
@@ -21,6 +27,9 @@
     .illustration,
     .form {
         width: 100% !important;
+    }
+    .illustration {
+        display: none;
     }
 }
 @media screen and (max-width: 700px) {
@@ -63,5 +72,31 @@
     .user-card {
         float: none;
         margin: 25px auto 0 auto;
+    }
+}
+@media screen and (max-width: 450px) {
+    nav {
+        align-items: center;
+        flex-direction: column;
+    }
+    nav .right-links ul {
+        flex-direction: column-reverse;
+    }
+    nav .right-links ul li {
+        margin: 15px 0;
+    }
+    .user-card {
+        width: 100%;
+        transform: scale(.8);
+        flex-direction: column;
+        text-align: center;
+    }
+    .flex {
+        padding: 15px 0;
+    }
+}
+@media screen and (max-width: 300px) {
+    h1.section-title {
+        font-size: 8vh;
     }
 }
