--- a/Public/assets/scss/base.scss
+++ b/Public/assets/scss/base.scss
@@ -20,7 +20,7 @@ h1.section-title {
     position: relative;
     text-align: center;
     font-family: $font1;
-    font-size: 5em;
+    font-size: 10vh;
     font-weight: bold;
 }
 h1.section-title::before {
@@ -33,6 +33,13 @@ h1.section-title::before {
     height: 4px;
     border-radius: 50px;
     @include primary-gradient;
+}
+h2.second-title {
+    padding: 10px 0;
+    position: relative;
+    font-family: $font1;
+    font-size: 3em;
+    font-weight: bold;
 }
 
 //BUTTONS
@@ -68,7 +75,7 @@ a.btn-blue:hover {
     border: none;
     filter: brightness(90%);
 }
-button.btn-submit {
+.btn-submit {
     cursor: pointer;
     outline: none;
     font-family: $font1;
@@ -82,18 +89,18 @@ button.btn-submit {
     border-radius: 50px;
     transition: all .2s ease-out;
 }
-button.btn-orange {
+.btn-orange {
     @include primary-gradient;
     border: none;
     color: white;
 }
-button.btn-blue {
+.btn-blue {
     @include secondary-gradient;
     border: none;
     color: white;
 }
-button.btn-orange:hover,
-button.btn-blue:hover {
+.btn-orange:hover,
+.btn-blue:hover {
     border: none;
     filter: brightness(90%);
 }
@@ -145,12 +152,33 @@ input::placeholder {
 #inscription form,
 #connexion form {
     text-align: center;
+    width: 100%;
+}
+.error {
+    display: inline-block;
+    position: relative;
+    padding: 5px 35px;
+    color: white;
+    background-color: rgba(255, 0, 0, 0.7);
+    border-radius: 100px;
+    font-weight: 200;
+    word-break: break-word;
+}
+.error::before {
+    content: '\f06a';
+    position: absolute;
+    left: 0;
+    top: 50%;
+    padding-left: 10px;
+    transform: translate3d(0, -50%, 0);
+    font-family: 'Font Awesome 5 Free';
+    font-weight: 900;
+    color: white;
 }
 
 // USER CARD
 .user-card {
     cursor: default;
-    pointer-events: none;
     width: fit-content;
     padding: 10px 15px;
     padding-left: 20px;
@@ -175,9 +203,94 @@ input::placeholder {
 }
 .user-card .avatar {
     width: 75px;
-    margin-left: 25px;
+    margin: 0 25px;
     border-radius: 50%;
 }
-.user-card {
+.user-card a.logout-btn {
+    padding: 10px;
+    text-decoration: none;
+    color: white;
+    font-size: 2em;
+    border-radius: 50%;
+    @include primary-gradient();
+    transition: .2s ease-out;
+}
+.user-card a.account-btn {
+    transition: .2s ease-out;
+}
+.user-card a.logout-btn:hover,
+.user-card a.account-btn:hover {
+    filter: brightness(90%);
+}
+#tooltipLogout {
+    background: #333;
+    color: white;
+    font-weight: bold;
+    padding: 4px 8px;
+    font-size: 13px;
+    border-radius: 4px;
+}
 
+// GRID
+.complete p {
+    margin: 30px 0;
+    text-align: center;
+    font-size: 1.5em;
+    line-height: 1.3em;
+}
+.complete span {
+    display: block;
+    font-weight: 300;
+    font-size: 0.8em;
+}
+.grid {
+    padding: 25px 0;
+    width: 100%;
+    display: grid;
+    grid-template-areas: "g n"
+                         "m m";
+    grid-gap: 20px;
+    grid-auto-flow: dense;
+}
+.grid .fav-garderie,
+.grid .fav-nourisse,
+.grid .map {
+    padding: 15px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 7px rgba(0, 0, 0, 0.1);
+    transition: .2s ease-out;
+}
+.grid .fav-garderie:hover,
+.grid .fav-nourisse:hover,
+.grid .map:hover {
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2),
+                0px 0px 50px rgba(0, 0, 0, 0.1);
+}
+.fav-garderie {
+    grid-area: 'g';
+    height: 340px;
+}
+.fav-nourisse {
+    grid-area: 'n';
+    height: 340px;
+}
+.map {
+    grid-area: 'm';
+    grid-row: 1 / 3;
+}
+#map {
+    border-radius: 15px;
+    border: 1px solid white;
+    transition: .2s ease-out;
+}
+#map:focus-within {
+    border: 1px solid #505050;
+}
+canvas.mapboxgl-canvas {
+    outline: none;
+    border: none;
+}
+canvas.mapboxgl-canvas:focus {
+    outline: none;
+    border: none;
 }
