stylisation de la page Mon Compte + fix loader + srollbar

--- a/Public/assets/css/responsive.css
+++ b/Public/assets/css/responsive.css
@@ -1,5 +1,17 @@
 @charset "UTF-8";
 /* ─── RESPONSIVE ───────────────────────────────────────── */
+@media screen and (max-width: 1280px) {
+  #account .flex {
+    width: 80%;
+  }
+}
+
+@media screen and (max-width: 1120px) {
+  #account .flex {
+    width: 90%;
+  }
+}
+
 @media screen and (max-width: 1000px) {
   .grid {
     display: -webkit-box;
@@ -9,6 +21,17 @@
     -webkit-box-direction: normal;
         -ms-flex-direction: column;
             flex-direction: column;
+  }
+  #account .flex {
+    width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+  #account .modifyInfos {
+    padding-top: 50px;
+    border-top: 1px solid #555;
   }
 }
 
@@ -75,6 +98,9 @@
   input[type=tel],
   textarea {
     width: 100%;
+  }
+  select {
+    width: 90%;
   }
 }
 
