--- a/Public/assets/css/base.css
+++ b/Public/assets/css/base.css
@@ -150,6 +150,7 @@ input[type=password],
 input[type=date],
 input[type=file],
 input[type=tel],
+select,
 textarea {
   outline: none;
   border: 1px solid #dddddd;
@@ -169,6 +170,7 @@ input[type=password]:focus,
 input[type=date]:focus,
 input[type=file]:focus,
 input[type=tel]:focus,
+select:focus,
 textarea:focus {
   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.1);
           box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.1);
@@ -373,4 +375,70 @@ canvas.mapboxgl-canvas {
 canvas.mapboxgl-canvas:focus {
   outline: none;
   border: none;
+}
+
+#account .flex {
+  margin: 0 auto;
+  width: 70%;
+}
+
+.addChild input,
+.modifyInfos input {
+  width: 100%;
+}
+
+.addChild form,
+.modifyInfos form {
+  text-align: center;
+}
+
+input#age {
+  padding-right: 80px;
+}
+
+span.ageLabel {
+  position: relative;
+}
+
+span.ageLabel::before {
+  position: absolute;
+  content: 'ans';
+  top: 0;
+  right: 0;
+  z-index: 999;
+  padding-right: 25px;
+  font-size: 1.5em;
+  font-weight: 500;
+  color: #999;
+  padding-left: 15px;
+  border-left: 1px solid #ccc;
+}
+
+span.beCareful {
+  display: block;
+  margin-top: 10px;
+  font-weight: 300;
+}
+
+a.add {
+  margin-left: 5px;
+  text-decoration: none;
+  font-size: 1.5em;
+  background: -webkit-gradient(linear, right top, left top, from(#FF9163), to(#FF7171));
+  background: linear-gradient(to left, #FF9163, #FF7171);
+  background-clip: text;
+  -webkit-background-clip: text;
+  -webkit-text-fill-color: transparent;
+  -webkit-transition: .2s ease-out;
+  transition: .2s ease-out;
+}
+
+a.add:hover {
+  -webkit-filter: brightness(90%);
+          filter: brightness(90%);
+}
+
+p#selected_allergy_list,
+p#selected_disease_list {
+  margin-top: 10px;
 }
