--- a/Public/assets/css/style.css
+++ b/Public/assets/css/style.css
@@ -155,6 +155,7 @@ input[type=password],
 input[type=date],
 input[type=file],
 input[type=tel],
+input[type=number],
 select,
 textarea {
   outline: none;
@@ -408,7 +409,7 @@ span.ageLabel {
 span.ageLabel::before {
   position: absolute;
   content: 'ans';
-  top: 0;
+  bottom: 10%;
   right: 0;
   z-index: 999;
   padding-right: 25px;
