--- a/Public/assets/css/base.css
+++ b/Public/assets/css/base.css
@@ -171,6 +171,7 @@ input[type=password]:focus,
 input[type=date]:focus,
 input[type=file]:focus,
 input[type=tel]:focus,
+input[type=number], :focus,
 select:focus,
 textarea:focus {
   -webkit-box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2), 0px 0px 10px rgba(0, 0, 0, 0.1);
