--- a/Public/assets/scss/base.scss
+++ b/Public/assets/scss/base.scss
@@ -144,6 +144,7 @@ input[type=password]:focus,
 input[type=date]:focus,
 input[type=file]:focus,
 input[type=tel]:focus,
+input[type=number],:focus,
 select:focus,
 textarea:focus {
     box-shadow: 0px 0px 2px rgba(0, 0, 0, 0.2),
