--- a/Public/assets/scss/responsive.scss
+++ b/Public/assets/scss/responsive.scss
@@ -78,6 +78,7 @@
     input[type=date],
     input[type=file],
     input[type=tel],
+    input[type=number],
     textarea {
         width: 100%;
     }
