--- a/Public/assets/css/responsive.css
+++ b/Public/assets/css/responsive.css
@@ -31,7 +31,8 @@
   }
   #account .modifyInfos {
     padding-top: 50px;
-    border-top: 1px solid #555;
+    border-top: 1px solid #ddd;
+    border-left: none;
   }
 }
 
