--- a/Public/assets/scss/responsive.scss
+++ b/Public/assets/scss/responsive.scss
@@ -21,7 +21,8 @@
     }
     #account .modifyInfos {
         padding-top: 50px;
-        border-top: 1px solid #555;
+        border-top: 1px solid #ddd;
+        border-left: none;
     }
 }
 @media screen and (max-width: 800px) {
